[gd_scene load_steps=2 format=3 uid="uid://jhdlqsokif5o"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_pnlc3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("1_pnlc3")

[node name="Connect" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.492
anchor_top = 0.402
anchor_right = 0.492
anchor_bottom = 0.402
offset_left = -138.784
offset_top = -83.496
offset_right = 138.216
offset_bottom = 83.504
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="IPLabel" type="Label" parent="Connect"]
layout_mode = 0
offset_left = 15.0
offset_top = 74.0
offset_right = 57.0
offset_bottom = 97.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "IP:"

[node name="IPAddress" type="LineEdit" parent="Connect"]
layout_mode = 0
offset_left = 17.0
offset_top = 102.0
offset_right = 173.0
offset_bottom = 133.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="Host" type="Button" parent="Connect"]
layout_mode = 0
offset_left = 181.0
offset_top = 38.0
offset_right = 246.0
offset_bottom = 69.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="Join" type="Button" parent="Connect"]
layout_mode = 0
offset_left = 181.0
offset_top = 102.0
offset_right = 246.0
offset_bottom = 133.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="ErrorLabel" type="Label" parent="Connect"]
layout_mode = 0
offset_left = 15.0
offset_top = 138.0
offset_right = 257.0
offset_bottom = 161.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.820312, 0.291595, 0.291595, 1)

[node name="ErrorDialog" type="AcceptDialog" parent="."]

[node name="Settings" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.49
anchor_top = 0.665
anchor_right = 0.49
anchor_bottom = 0.665
offset_left = -66.48
offset_top = -28.92
offset_right = 74.52
offset_bottom = 25.08
theme_override_font_sizes/font_size = 20
text = "Settings
"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.492
anchor_top = 0.804
anchor_right = 0.492
anchor_bottom = 0.804
offset_left = -70.784
offset_top = -26.992
offset_right = 70.216
offset_bottom = 27.008
theme_override_font_sizes/font_size = 20
text = "Quit
"

[connection signal="pressed" from="Connect/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
